--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
+datasets
 papers
+report/notes
 
 # Created by https://www.toptal.com/developers/gitignore/api/pycharm,python,latex
 # Edit at https://www.toptal.com/developers/gitignore?templates=pycharm,python,latex
